2003-02-14  Loban A Rahman <loban@earthling.net>
    * Makefile.am: Fixed itsy bitsy issues on importing stickynotes.
    * docs/: Readded docs into tree.
    * Makefile.am, pixmaps/Makefile.am: Changed destination locations of
      glade files and pixmaps.

2003-01-26  Kevin Vandersloot <kfv101@psu.edu>
    * import into gnome-applets

2003-01-25  Loban A Rahman <loban@earthling.net>
    * src/stickynotes.c: Applied patch by Christophe Fergeau to allow
      compilation on gcc 2.95 (and make proper ANSI C).
    
2003-01-23  Loban A Rahman <loban@earthling.net>
    * many files: Now the default click-behaivour of the applet is
      configurable. It can either be "create a new note" or show/hide all
      sticky notes. Thanks to Mike Sowka for the patch!
    * configure.in: release 1.0.6

2003-01-16  Loban A Rahman <loban@earthling.net>
    * Makefile.am: Fixed packaging error.
    * configure.in: release 1.0.5
    * src/stickynotes.c: When changing sticky note title, the old title
      appears in the entry box for the new title.

2003-01-15  Loban A Rahman <loban@earthling.net>
    * src/stickynotes_applet_callbacks.c: Fixed some stupid typos
      preventing GConf keys from getting written properly.
    * src/stickynotes_applet_callbacks.c: Color selection in the preferences
      dialog now works.
    * doc/C/stickynotes_applet.xml: Added documentation for the new "Color"
      option in the preferences dialog.
    * stickynotes_applet.schemes.in: Clarified documentation for the
      settings/sticky key.
    * stickynotes_applet.xml.in: Improved applet popup menu.
    * stickynotes_applet.glade: Added HIG-compliant tooltips.
    * src/stickynotes_applet_callbacks.c: Added a hack so that the About
      displays the program name and version properly. For some reason libglade
      does not set these properties properly.
    * configure.in: release 1.0.4

2003-01-14  Loban A Rahman <loban@earthling.net>
    * src/*.c: Tweaked and documented some code.