@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-stickynotes_applet_pixmapsdir = $(datadir)/pixmaps/stickynotes_applet
+stickynotes_applet_pixmapsdir = $(datadir)/pixmaps/stickynotes
 
 stickynotes_applet_pixmaps_DATA = \
 	stickynotes.png \
