@@ -3,9 +3,12 @@
     * docs/: Readded docs into tree.
     * Makefile.am, pixmaps/Makefile.am: Changed destination locations of
       glade files and pixmaps.
+    * stickynotes.c: Removed #if that decided between Gtk 2.0 and 2.2.
+      Now, Gtk 2.2 is required.
 
 2003-01-26  Kevin Vandersloot <kfv101@psu.edu>
     * import into gnome-applets
+    * src/: Moved all files up. Now no src directory exists.
 
 2003-01-25  Loban A Rahman <loban@earthling.net>
     * src/stickynotes.c: Applied patch by Christophe Fergeau to allow
